# json-maestro

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  array.json  arrayobject.json  arrayobject_clean.json  book.toml  dev.requirements  duplicatejsonkey.py  jsonmaestro.py  object.json  objectarray.json  objectarray_clean.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py
.github/workflows/: changelog.yaml  ci.yml  clean-branches.yml  docs.yml  pip-install.yml  release.yml  test.yml
data/: commented.json  commented_with_duplicate.json  example.csv  example.json  example_invalid_for_csv_conversion.json  json.json  jsonc.json  package-lock-data.json  really_large.csv  test_stdin.txt
docs/: .gitignore  Info.md  Installation.md  JSONMaestro.md  Library_Installation.md  README.md  SUMMARY.md  Usage.md
docs/api/: converter.md  helpers-examples.md  helpers.md  index.md  jsonmaestro-examples.md  jsonmaestro.md  loader.md  logger.md
examples/: array_clean.json  package.json
patches/: 0001-implements-removing-block-comments.patch
scripts/docs/: build.bat  build.ps1  build.sh  serve.bat  serve.ps1  serve.sh
src/jsonmaestro/: __init__.py  __init__.pyi  __main__.py  _logger.py  _logger.pyi  _logger39.py  _logger39.pyi  app_cli.py  app_converter.py  constants.pyi  converter.py  converter.pyi  helpers.py  helpers.pyi  jsonmaestro.py  jsonmaestro.pyi  loader.py  loader.pyi  loaders.py  loaders.pyi  logger.py  logger.pyi  main.py
src/jsonmaestro/apps/: cli.py  converter.py
src/jsonmaestro/enums/: format.py  format.pyi
src/jsonmaestro/errors/: __init__.py  __init__.pyi
src/jsonmaestro/interfaces/: converter.py
src/jsonmaestro/internal/: instrumentor.py
tests/: test.py  test_cleaners.py  test_converter.py  test_converter_app.py  test_format_helpers.py  test_generic_helpers.py  test_json_cleaner.py  test_loader.py  test_loaders.py  test_logger.py  test_modules.py
tests/enums/: test_format.py
tests/errors/: test_errors.py
