[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonmaestro"
version = "0.0.2"
authors = [{ name = "Greg Bowne", email = "gbowne144@gmail.com" }]
description = "JSONMaestro is a powerful Python tool designed to clean, process, and optimize JSON-like files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = ["click"]
scripts = { jsonmaestro = "jsonmaestro.apps.cli:main", jm-cli = "jsonmaestro.apps.cli:main", jm-convert = "jsonmaestro.apps.converter:main" }

[project.urls]
Homepage = "https://github.com/gbowne1/json-maestro"
Issues = "https://github.com/gbowne1/json-maestro/issues"
