[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonmaestro"
version = "0.0.3.1"
authors = [{ name = "Greg Bowne", email = "gbowne144@gmail.com" }]
description = "JSONMaestro is a powerful Python tool designed to clean, process, and optimize JSON-like files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = ["click"]
scripts = { jsonmaestro = "jsonmaestro.app_cli:main", jm-cli = "jsonmaestro.app_cli:main", jm-convert = "jsonmaestro.app_converter:main" }

[project.urls]
Homepage = "https://github.com/gbowne1/json-maestro"
Issues = "https://github.com/gbowne1/json-maestro/issues"
